syntax = "proto3";

option java_multiple_files = true;

option java_package = "net.devibot.grpc.messages";

message ConnectToMainframeRequest {
    int32 port = 1;
    string ip = 2;
}

message ConnectToMainframeResponse {
    bool success = 1;
    int32 provider_id = 2;
}

message KeepAliveMessage {}

message DefaultSuccessResponse {
    bool success = 1;
}